[package]
name = "flightsim-p2p-signaling"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast WebRTC signaling server for flight sim P2P connections"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dashmap = "5.5"
anyhow = "1.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true